--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
     "react-native-actions-sheet": "^0.9.0-alpha.24",
+    "react-native-device-info": "^10.11.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
