--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
@@ -35,7 +36,8 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "yarn": "^1.22.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
