--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@shopify/flash-list": "^1.6.2",
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
