--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
+    "react-native-webview": "^13.6.3",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
