--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "rn-fetch-blob": "^0.12.0",
     "yarn": "^1.22.20"
   },
   "devDependencies": {
