--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
     "react-native-webview": "^13.6.3",
+    "react-naver-maps": "^0.1.3",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
