--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-images-to-pdf": "^0.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-reanimated-carousel": "^3.5.1",
@@ -53,6 +55,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-pdf-lib": "^0.2.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.11",
     "babel-jest": "^29.2.1",
