--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.45.2",
     "react-native": "0.72.6",
     "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-config": "^1.5.1",
@@ -37,7 +37,7 @@
     "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
-    "react-native-webview": "^13.6.3",
+    "react-native-webview": "11.23.1",
     "react-naver-maps": "^0.1.3",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
