--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -38,7 +39,6 @@
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
     "react-native-webview": "11.23.1",
-    "react-naver-maps": "^0.1.3",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
